# cnc-stummeldriver

./: CMakeLists.txt  README.md  Stummel.launch  department_sim.pgm  department_sim.yaml  distributed_systems_complex.world  distributed_systems_simple.world  package.xml  simulation.launch  teamwork_06_11_2019.txt
installation/: Dockerfile  README.txt  gui-docker  install.sh  installMe.sh  launchMe.sh  launchMoveIt.sh  rosMe.sh
installation/StummelHoltKaffee/: .setup_assistant  CMakeLists.txt  package.xml
installation/scripts/: launchDemo.sh  launchEnvironment.sh  launchPandaDemo.sh  launchPlanning.sh  launchStummelDemo.sh  setupAssistant.sh
installation/stummel_holt_kaffee/: .setup_assistant  CMakeLists.txt  package.xml
launch/: Stummel.launch  Stummel.rviz  Stummel_Simulation.launch  handy-stummel.launch  jaco_control.launch  navigation.launch  ninja-move_base-simulation.launch.xml  simulation.launch  stummel.rviz
launch/p2os_launch/: base_local_planner_params.yaml  costmap_common_params_stummel.yaml  global_costmap_params.yaml  local_costmap_params.yaml
maps/: department_sim.xcf
models/box/: box.sdf  model.config
models/coke_can/: model-1_4.sdf
models/distributed_systems_department/: model.config  model.sdf
models/fire/: fire.sdf  model.config
models/hinged_door/: doorcmd.sh  model-1_4.sdf  model.config
models/landmark/: landmark.sdf  model.config
models/large_table/: model.config  model.sdf
models/medium_table/: model.config  model.sdf
models/small_table/: model.config  (+1 more)
urdf/: robot.xacro  stummel-desc.default.xml  stummel-desc.handy.xml
(+80 files in other folders)
